Improve Pod V4 Accessibility: * Translate select2 messages in dashboard & video completion * Correct some i18n strings * Move submitFormFile in a separate function, so it can be directly called instead of forcing click event on hidden button in filewidget * Correct some color contrast on podfile
Style :
* Use pod-primary color on active dropdown links

Optimisation:

* Only load Select2 JS on video Completion when USE_SPEAKER=True

--- a/pod/main/static/css/pod.css
+++ b/pod/main/static/css/pod.css
@@ -81,6 +81,7 @@
 
   /* BOOTSTRAP COLORS */
   --bs-primary-rgb: var(--pod-primary-rgb);
+  --bs-dropdown-link-active-bg: var(--pod-primary);
   --bs-light: #f8f9fa;
   --bs-dark: #343a40;
   --bs-link-color: var(--pod-link-color);
